syntax = "proto3";

package ai.metathings.service.identityd;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "group.proto";

message PatchGroupRequest {
	// Deprecated
	reserved "domain_id";

	google.protobuf.StringValue group_id = 1 [(validator.field) = {msg_exists: true}];
	google.protobuf.StringValue name = 2;
	google.protobuf.StringValue description = 3;
}

message PatchGroupResponse {
	Group group = 1;
}
